--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1621,7 +1621,10 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
        ("C-c d d" . devdocs-lookup-javascript)
        ("C-c d C-d" . devdocs-lookup-dom)
        ("C-c d C-e" . devdocs-lookup-dom_events)
-       ("C-c d C-n" . devdocs-lookup-node)))
+       ("C-c d C-j" . devdocs-lookup-jquery)
+       ("C-c d C-l" . devdocs-lookup-lodash)
+       ("C-c d C-n" . devdocs-lookup-node)
+       ("C-c d C-x" . devdocs-lookup-express)))
 
     ;; Resolve keybinding conflict with eglot
     (unbind-key "M-." js2-mode-map)
