--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ Finally, copy the dotfiles to your home directory.
     - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
     - [[https://geoff.greer.fm/ag/][The Silver Searcher]]
     - [[https://x.org/][xprop]]
-  - Arduino:
+  - Arduino (depends on C family):
     - [[https://www.arduino.cc/en/Main/Software][Arduino IDE]]
   - C family:
     - [[https://gcc.gnu.org/][GCC]]
