--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1758,7 +1758,11 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
     (setq org-adapt-indentation nil)
     (setq org-hide-emphasis-markers t)
     (setq org-startup-with-inline-images t)
-    (setq org-image-actual-width (round (* (/ 1920 2) 0.95)))
+    (let ((width (thread-last (display-monitor-attributes-list)
+                   car                   ; Primary display
+                   (alist-get 'workarea) ; Arrangement/resolution without taskbar
+                   (nth 2))))            ; Width
+      (setq org-image-actual-width (floor (* width (/ 1 3.0)))))
     (setq org-startup-with-latex-preview t))
 
   (use-package org-agenda
