[emacs] Rephrase comment.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -978,8 +978,8 @@ When revisiting then modifying file, history is discarded.
     :config
     (setq ispell-program-name "hunspell")
     (let ((dictionary-name "en_US"))
-      ;; On Windows, Hunspell requires DICTIONARY environment variable
-      ;; to be set
+      ;; On Windows, Hunspell requires the DICTIONARY environment
+      ;; variable to be set
       (when (eq system-type 'windows-nt)
         (setenv "DICTIONARY" dictionary-name))
       (setq ispell-dictionary dictionary-name)))
