[emacs] Configure pipenv-mode.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1248,6 +1248,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     :config
     (which-key-add-key-based-replacements
       "C-c !" "errors"
+      "C-c $" "pipenv"
       "C-c &" "yasnippet"
       "C-c d" "documentation"
       "C-c f" "files"
@@ -1979,6 +1980,18 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
     :config
     (add-hook 'python-mode-hook #'koek-py/disable-checker)
     :delight (python-mode "Py" :major))
+#+END_SRC
+
+*** pipenv - Consume packages
+[[https://github.com/pwalsh/pipenv.el][pipenv (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package pipenv
+    :ensure t
+    :hook (python-mode . pipenv-mode)
+    :config
+    (define-key pipenv-mode-map (kbd "C-c $") pipenv-command-map)
+    :delight)
 #+END_SRC
 
 ** Scheme
