[emacs] Treat file names starting with ~/ as absolute file names.
Consistent with file-name-absolute-p.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -163,7 +163,7 @@ Move deleted files to trash.
     :config
     (mapc (apply-partially #'add-to-list 'recentf-exclude)
           (list "/share/emacs/"
-                (expand-file-name (locate-user-emacs-file "elpa/"))
+                (locate-user-emacs-file "elpa/")
                 no-littering-etc-directory
                 no-littering-var-directory))
     (recentf-mode))
