--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -916,6 +916,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
     :ensure t
     :hook ((text-mode prog-mode) . yas-minor-mode)
     :config
+    (declare-function koek-org/get-src-block-var-value "50-general")
     (declare-function koek-ys/get-org-name "50-general")
     (declare-function yas-choose-value "yasnippet")
     (declare-function yas-reload-all "yasnippet")
@@ -944,6 +945,24 @@ For the major mode, see [[*YASnippet][YASnippet]].
                        koek-ys/ietf-languages)))
       (fset 'koek-ys/org-to-ietf (lambda (org)
                                    (cdr (assoc org map)))))
+
+    (defun koek-ys/make-ensure-result-directory (var-name)
+      "Return function to ensure result directory of current source block exists.
+  VAR-NAME is a string, the variable name which stores the result
+  file name."
+      (lambda ()
+        (when-let (file-name
+                   (when-let (value (koek-org/get-src-block-var-value var-name))
+                     (file-name-directory
+                      (replace-regexp-in-string (rx (or (and line-start "\"")
+                                                        (and "\"" line-end)))
+                                                "" value))))
+          (when-let (root-file-name (buffer-file-name))
+            (setq file-name
+                  (expand-file-name file-name
+                                    (file-name-directory root-file-name))))
+          (when (file-name-absolute-p file-name)
+            (make-directory file-name 'parents)))))
 
     ;; Load own snippets
     (setq yas-snippet-dirs (delq 'yas-installed-snippets-dir yas-snippet-dirs))
@@ -1530,7 +1549,7 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
                                        (:hardware . ,hardware-spec))))))))
                hardware-specs)))
         (cdr (assoc (completing-read "Board: " candidates nil t) candidates)))))
-    (make-directory file-name 'make-parents)
+    (make-directory file-name 'parents)
     (koek-ino/write-cross-file (expand-file-name "cross.txt" file-name)
       :binaries
       c (executable-find "avr-gcc")
@@ -1957,6 +1976,24 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
   (use-package ob-core
     :defer t
     :config
+    (declare-function org-babel-get-src-block-info "ob-core")
+
+    (defun koek-org/get-src-block-var-value (var-name)
+      "Return value of variable VAR-NAME in current source block.
+  VAR-NAME is a string, the variable name."
+      (thread-last (org-babel-get-src-block-info 'light)
+        (nth 2)                           ; Header arguments
+        (seq-filter (pcase-lambda (`(,type))
+                      (eq type :var)))
+        (mapcar (pcase-lambda (`(,_type . ,value))
+                  ;; Variable value could include "=" (e.g. :var
+                  ;; foo="bar=baz")
+                  (let ((pos (string-match-p "=" value)))
+                    (cons (substring value 0 pos) (substring value (1+ pos))))))
+        (seq-filter (pcase-lambda (`(,name))
+                      (string= name var-name)))
+        cdar))
+
     ;; Evaluate code blocks in buffer after confirmation
     (let ((whitelist ()))
       (setq org-confirm-babel-evaluate
