--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1885,8 +1885,10 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
                                    (scheme . t)
                                    (sql . t)))
 
+    ;; Appearance
     (setq org-adapt-indentation nil)
 
+    ;; Appearance - Images
     (setq org-startup-with-inline-images t)
     (let ((width (thread-last (display-monitor-attributes-list)
                    car                   ; Primary display
@@ -1895,12 +1897,14 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
       (setq org-image-actual-width (floor (* width (/ 1 3.0)))))
     (add-hook 'org-babel-after-execute-hook #'org-redisplay-inline-images)
 
+    ;; Appearance - LaTeX previews
     (setq org-startup-with-latex-preview t)
     (setq org-preview-latex-image-directory
           (no-littering-expand-var-file-name "org/latex-previews/"))
     (setq org-format-latex-options
           (plist-put org-format-latex-options :scale (/ 4 3.0)))
 
+    ;; Appearance - Export
     (add-to-list 'org-latex-packages-alist '("" "listings" t)))
 
   (use-package org-agenda
